Bake-API: use size_t instead of width, height

* Original patch by Sergey Sharybin
* Current patch includes function to estimate a width/height when baking into multiple images

Attempt to Fix T41222 Blender gives weird ouput when baking (4096*4096) resolution on GPU

Reviewers: sergey

Subscribers: RadiationG0D

Maniphest Tasks: T41222

Differential Revision: https://developer.blender.org/D688