intern/cycles/blender/blender_python.cpp
@@ -160,9 +160,9 @@ static PyObject *bake_func(PyObject *self, PyObject *args)
 	PyObject *pysession, *pyobject;
 	PyObject *pypixel_array, *pyresult;
 	const char *pass_type;
-	int num_pixels, depth;
+	int width, height, depth;
 
-	if(!PyArg_ParseTuple(args, "OOsOiiO", &pysession, &pyobject, &pass_type, &pypixel_array,  &num_pixels, &depth, &pyresult))
+	if(!PyArg_ParseTuple(args, "OOsOiiiO", &pysession, &pyobject, &pass_type, &pypixel_array, &width, &height, &depth, &pyresult))
 		return NULL;
 
 	BlenderSession *session = (BlenderSession*)PyLong_AsVoidPtr(pysession);
@@ -179,7 +179,7 @@ static PyObject *bake_func(PyObject *self, PyObject *args)
 
 	python_thread_state_save(&session->python_thread_state);
 
-	session->bake(b_object, pass_type, b_bake_pixel, num_pixels, depth, (float *)b_result);
+	session->bake(b_object, pass_type, b_bake_pixel, width, height, depth, (float *)b_result);
 
 	python_thread_state_restore(&session->python_thread_state);
 
